<resources>
    <string name="app_name">Flash Cards</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_card_edit">CardEditActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="edit_tab_title">Question</string>
    <string name="flip_btn">flip</string>
    <string name="rec_deck_name">psychiatry</string>
    <string name="card_count">13 cards</string>
    <string name="days_last_used">last used: 10 days ago</string>
    <string name="btn_test_deck_info">Test</string>
    <string name="action_import">Import</string>
    <string name="action_import_sample">Import Sample Deck</string>
    <string name="test_action_main_rec">Test</string>
    <string name="export_action_main_rec">Export</string>
    <string name="delete_action_main_rec">Delete</string>
    <string name="popup_options_button">Options Button</string>
    <string name="revise_action_main_rec">Revise</string>
    <string name="flip_btn_text">FLIP</string>
    <string name="skip_btn_text">SKIP</string>
    <string name="incorrect_btn_text">Incorrect</string>
    <string name="correct_btn_text">Correct</string>
    <string name="btn_revise_deck_info">Revise</string>
    <string name="txt_progress_deck_info">Deck Learnt: 0%</string>
    <string name="tv_info_deck">Created: 5 Days Ago</string>
    <string name="rename_action_main_rec">Rename</string>
    <string name="tv_cards_tested">1</string>
    <string name="question_tab_title">Question</string>
    <string name="answer_tab_title">Answer</string>
</resources>
