<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_revise"
        android:orderInCategory="100"
        android:title="@string/revise_action_main_rec"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_test"
        android:orderInCategory="100"
        android:title="@string/test_action_main_rec"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:title="@string/export_action_main_rec"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete_action_main_rec"
        app:showAsAction="collapseActionView" />

</menu>