<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_rec_deck"
    android:transitionName="deck_item_transition"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    app:cardBackgroundColor="@color/colorAccent"
    app:contentPaddingTop="10dp"
    app:contentPaddingBottom="5dp"
    app:cardCornerRadius="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_rec_deck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/rec_deck_name"
            android:textAllCaps="true"
            android:transitionName="deck_title_transition"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/popup_options_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cards_rec_deck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:text="@string/card_count"
            android:textColor="@color/white_teal"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_rec_deck"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/days_rec_deck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:text="@string/days_last_used"
            android:textColor="@color/white_teal"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/popup_options_btn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cards_rec_deck"
            app:layout_constraintTop_toBottomOf="@+id/title_rec_deck"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/popup_options_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_overflow_holo_dark"
            android:contentDescription="@string/popup_options_button"
            android:onClick="showPopup"
            android:src="@drawable/ic_overflow_holo_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39" />

<!--        <Button
            android:id="@+id/test_button_rec_deck"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:transitionName="test_btn_transition"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Test"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.99"
            app:layout_constraintTop_toTopOf="parent" />-->

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>